# SYCL-ML

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  LICENSE.txt  README.md  eigen.patch
cmake/: HandleEigen.cmake  HandleSyclParallelSTL.cmake
cmake/Modules/: FindEigen.cmake  FindSyclParallelSTL.cmake
example/: CMakeLists.txt
example/src/mnist/: read_mnist.hpp  run_binary_svm.cpp  run_classifier.hpp  run_gauss_classifier.cpp  run_gmm.cpp  run_lin_classifier.cpp  run_svm.cpp
example/src/utils/: scoped_timer.hpp  sycl_utils.hpp
include/ml/classifiers/: classifier.hpp  data_splitter.hpp  data_splitter_extremum_dist.hpp  extremum_dist.hpp
include/ml/classifiers/bayes/: bayes_classifier.hpp  linear_classifier.hpp
include/ml/classifiers/bayes/distributions/: log_gaussian_distribution.hpp
include/ml/classifiers/em/: em_classifier.hpp  log_model_per_label.hpp
include/ml/classifiers/svm/: kernel_cache.hpp  smo.hpp  svm.hpp  svm_kernels.hpp
include/ml/eigen/: eigen.hpp  sycl_to_eigen.hpp
include/ml/math/: cg_solve.hpp  cov.hpp  eig.hpp  functors.hpp  helper.hpp  mat_inv.hpp  mat_mul.hpp  mat_ops.hpp  qr.hpp  svd.hpp  tri_inv.hpp  tri_solve.hpp  vec_ops.hpp
include/ml/preprocess/: apply_pca.hpp  pca.hpp
include/ml/utils/: access.hpp  buffer_acc.hpp  buffer_t.hpp  common.hpp  copy.hpp  device_constants.hpp  memory_helper.hpp  optimal_range.hpp  save_utils.hpp  sycl_helper.hpp  sycl_types.hpp
include/ml/utils/debug/: assert.hpp  print_utils.hpp  write_bmp.hpp
results/: gauss_classifier_pca_128_f  gauss_classifier_pca_64_f  gmm_2_64_f  gmm_8_64_f  linear_classifier_pca_128_f  linear_classifier_pca_64_f  linear_classifier_raw_f  svm_pca_64-rbf-0_05-5-0_01  svm_pca_64-rbf-0_05-5-0_1  svm_pca_64_poly-2-1-1-1000-0_01  svm_raw_poly-2-1-1-1000-0_01  svm_raw_rbf-0_05-5-0_01
tests/: CMakeLists.txt
tests/src/math/: test_center.cpp  test_cov.cpp  test_dot_product.cpp  test_inner_product.cpp  test_inv.cpp  test_mat_mul.cpp  test_qr.cpp  test_svd.cpp  test_tr_op.cpp  test_tri_solve.cpp
tests/src/svm/: test_arg_extremum_cond.cpp  test_find_extremum_idx.cpp  test_svm_linear.cpp  test_svm_or.cpp  test_svm_poly.cpp  test_svm_xor.cpp
tests/src/utils/: assert_utils.hpp  sycl_utils.hpp  test_save_load.cpp  utils.hpp
